2001-12-21  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>

	* w3m.el (emacs-w3m-version): Release 1.2.3.
	(w3m-type): Changed condition to decide type.
	(w3m-decoder-alist): Call `file-name-nondirectory' before
	`w3m-command' is refered.
	(w3m-dirlist-cgi-program): Ditto.

2001-12-21  ARISAWA Akihiro  <ari@mbf.sphere.ne.jp>

	* w3m.el (w3m-type): Use "w3m-m17n" if exists.
	(w3m-decoder-alist): Use `w3m-command' for inflate command path.
	(w3m-dirlist-cgi-program): Use `w3m-command'.
	(w3m-dump-head-source-command-arguments) [w3mmee]: Don't
	add "-o accept_language=xxx".

2001-12-06  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>

	* w3m.el (emacs-w3m-version): Release 1.2.2.
	(w3m-type): Follow the new official release of w3m.

2001-11-15  Hideyuki SHIRAI  <shirai@meadowy.org>

	* w3m.el: Marge main trunk fix of `charset is void on w3mmee and
	w3m-m17n', work of TSUCHIYA Masatoshi <tsuchiya@namazu.org>.
	(w3m-rendering-half-dump): Accept an optional argument for w3mmee
	and w3m-m17n.
	(w3m-rendering-buffer-1): Accept an optional argument for w3mmee
	and w3m-m17n.
	(w3m-rendering-unibyte-buffer): Call w3m-rendering-buffer-1 with
	one argument `charset'.
	(w3m-rendering-multibyte-buffer): Ditto.

2001-11-12  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>

	* w3m.el (emacs-w3m-version): Release 1.2.1.
	(w3m-expand-url): Remove the last segment of the base URL
	before concatination the specified URL which has only a query part
	and the base URL.

2001-11-08  Takenobu Sugiyama  <sugiyama@ae.advantest.co.jp>

	* shimbun/sb-nikkansports.el (shimbun-get-headers): Add new
	separated string for nikkansports.mlb.
	(shimbun-nikkansports-end-of-header-regexp): New variable (added
	by yamaoka 2001-11-12).

2001-11-09  Katsumi Yamaoka  <yamaoka@jpl.org>

	* shimbun/sb-asahi.el (shimbun-get-headers): Look for the new news
	in the list page of a group if a group is a member of
	`shimbun-asahi-groups-should-use-list-page'.
	(shimbun-asahi-get-headers-in-the-top-page): New function.