@@ -1,3 +1,9 @@
+2001-12-20  Katsumi Yamaoka  <yamaoka@jpl.org>
+
+	* w3m.el (w3m-load-list): Removed a bogus code for XEmacs; don't
+	bind the value of `file-coding-system-for-read' if the optional
+	arg is nil and `w3m-file-coding-system-for-read' is nil.
+
 2001-12-21  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>
 
 	* w3m.el (emacs-w3m-version): Release 1.2.3.
